// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`LineNumberRenderable in ScrollBox single Code renderable with line numbers in ScrollBox - correct dimensions 1`] = `
"┌────────────────────────────┐                              
│   1 function test1() {     │                              
│   2   console.log("Line    │                              
│     1");                   │                              
│   3   return 1;            │                              
│   4 }                      │                              
│   5 function test2() {     │                              
│   6   console.log("Line    │                              
│     2");                   │                              
└────────────────────────────┘                              
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox single Code renderable in ScrollBox - scroll and verify dimensions 1`] = `
"┌──────────────────────────────────────┐                    
│   1 function test1() {               │                    
│   2   console.log("Line 1");         │                    
│   3   return 1;                      │                    
│   4 }                                │                    
│   5 function test2() {               │                    
│   6   console.log("Line 2");         │                    
│   7   return 2;                      │                    
│   8 }                                │                    
│   9 function test3() {               │                    
│  10   console.log("Line 3");         │                    
└──────────────────────────────────────┘                    
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox single Code renderable in ScrollBox - scroll and verify dimensions 2`] = `
"┌──────────────────────────────────────┐                    
│   1 function test1() {               │                    
│   2   console.log("Line 1");         │                    
│   3   return 1;                      │                    
│   4 }                                │                    
│   5 function test2() {               │                    
│   6   console.log("Line 2");         │                    
│   7   return 2;                      │                    
│   8 }                                │                    
│   9 function test3() {               │                    
│  10   console.log("Line 3");         │                    
└──────────────────────────────────────┘                    
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox single Code renderable in ScrollBox - scroll and verify dimensions 3`] = `
"┌──────────────────────────────────────┐                    
│   1 function test1() {               │                    
│   2   console.log("Line 1");         │                    
│   3   return 1;                      │                    
│   4 }                                │                    
│   5 function test2() {               │                    
│   6   console.log("Line 2");         │                    
│   7   return 2;                      │                    
│   8 }                                │                    
│   9 function test3() {               │                    
│  10   console.log("Line 3");         │                    
└──────────────────────────────────────┘                    
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox multiple Code renderables with line numbers in ScrollBox - correct dimensions 1`] = `
"┌────────────────────────────────────────────────┐         █
│  1 function test1() {                          │         █
│  2   console.log("Line 1");                    │         █
│  3   return 1;                                 │         █
│  4 }                                           │         █
│  5 function test2() {                          │         █
│  6   console.log("Line 2");                    │         █
└────────────────────────────────────────────────┘         █
                                                           █
                                                           █
┌────────────────────────────────────────────────┐          
│  1 function test1() {                          │          
│  2   console.log("Line 1");                    │          
│  3   return 1;                                 │          
│  4 }                                           │          
│  5 function test2() {                          │          
│  6   console.log("Line 2");                    │          
└────────────────────────────────────────────────┘          
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox multiple Code renderables with line numbers in ScrollBox - correct dimensions 2`] = `
"│  5 function test2() {                          │          
│  6   console.log("Line 2");                    │          
└────────────────────────────────────────────────┘          
                                                            
                                                            
┌────────────────────────────────────────────────┐         █
│  1 function test1() {                          │         █
│  2   console.log("Line 1");                    │         █
│  3   return 1;                                 │         █
│  4 }                                           │         █
│  5 function test2() {                          │         █
│  6   console.log("Line 2");                    │         █
└────────────────────────────────────────────────┘         █
                                                           █
                                                           █
┌────────────────────────────────────────────────┐          
│  1 function test1() {                          │          
│  2   console.log("Line 1");                    │          
│  3   return 1;                                 │          
│  4 }                                           │          
"
`;

exports[`LineNumberRenderable in ScrollBox nested boxes with different border styles - dimensions correct 1`] = `
"╔═════════════════════════════════════════════════════╗     
║                                                     ║     
║                                                     ║     
║  ╭───────────────────────────────────────────╮      ║     
║  │                                           │      ║     
║  │    1  function test1() {                  │      ║     
║  │    2    console.log("Line 1");            │      ║     
║  │    3    return 1;                         │      ║     
║  │    4  }                                   │      ║     
║  │    5  function test2() {                  │      ║     
║  │    6    console.log("Line 2");            │      ║     
║  │    7    return 2;                         │      ║     
║  │    8  }                                   │      ║     
║  │    9  function test3() {                  │      ║     
║  │   10    console.log("Line 3");            │      ║     
║  │   11    return 3;                         │      ║     
║  │                                           │      ║     
║  ╰───────────────────────────────────────────╯      ║     
╚═════════════════════════════════════════════════════╝     
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox nested boxes with different border styles - dimensions correct 2`] = `
"╔═════════════════════════════════════════════════════╗     
║                                                     ║     
║                                                     ║     
║  ╭───────────────────────────────────────────╮      ║     
║  │                                           │      ║     
║  │    1  function test1() {                  │      ║     
║  │    2    console.log("Line 1");            │      ║     
║  │    3    return 1;                         │      ║     
║  │    4  }                                   │      ║     
║  │    5  function test2() {                  │      ║     
║  │    6    console.log("Line 2");            │      ║     
║  │    7    return 2;                         │      ║     
║  │    8  }                                   │      ║     
║  │    9  function test3() {                  │      ║     
║  │   10    console.log("Line 3");            │      ║     
║  │   11    return 3;                         │      ║     
║  │                                           │      ║     
║  ╰───────────────────────────────────────────╯      ║     
╚═════════════════════════════════════════════════════╝     
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox ScrollBox with horizontal and vertical scrolling - dimensions stable 1`] = `
"┌────────────────────────────────────────────────┐          
│   1 const veryLongVariableName1 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   2 const veryLongVariableName2 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   3 const veryLongVariableName3 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   4 const veryLongVariableName4 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   5 const veryLongVariableName5 = "This is a   │          
└────────────────────────────────────────────────┘          
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox ScrollBox with horizontal and vertical scrolling - dimensions stable 2`] = `
"┌────────────────────────────────────────────────┐          
│   1 const veryLongVariableName1 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   2 const veryLongVariableName2 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   3 const veryLongVariableName3 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   4 const veryLongVariableName4 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   5 const veryLongVariableName5 = "This is a   │          
└────────────────────────────────────────────────┘          
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox ScrollBox with horizontal and vertical scrolling - dimensions stable 3`] = `
"┌────────────────────────────────────────────────┐          
│   1 const veryLongVariableName1 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   2 const veryLongVariableName2 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   3 const veryLongVariableName3 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   4 const veryLongVariableName4 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   5 const veryLongVariableName5 = "This is a   │          
└────────────────────────────────────────────────┘          
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox ScrollBox with horizontal and vertical scrolling - dimensions stable 4`] = `
"┌────────────────────────────────────────────────┐          
│   1 const veryLongVariableName1 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   2 const veryLongVariableName2 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   3 const veryLongVariableName3 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   4 const veryLongVariableName4 = "This is a   │          
│     very long line that should require         │          
│     horizontal scrolling to view completely";  │          
│   5 const veryLongVariableName5 = "This is a   │          
└────────────────────────────────────────────────┘          
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox gutter width changes with line count - verify remeasure 1`] = `
"┌──────────────────────────────────────┐                    
│ 1 function test1() {                 │                    
│ 2   console.log("Line 1");           │                    
│ 3   return 1;                        │                    
│ 4 }                                  │                    
│ 5 function test2() {                 │                    
│ 6   console.log("Line 2");           │                    
│ 7   return 2;                        │                    
│ 8 }                                  │                    
│                                      │                    
│                                      │                    
└──────────────────────────────────────┘                    
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox gutter width changes with line count - verify remeasure 2`] = `
"┌──────────────────────────────────────┐                    
│  1 function test1() {                │                    
│  2   console.log("Line 1");          │                    
│  3   return 1;                       │                    
│  4 }                                 │                    
│  5 function test2() {                │                    
│  6   console.log("Line 2");          │                    
│  7   return 2;                       │                    
│  8 }                                 │                    
│  9 function test3() {                │                    
│ 10   console.log("Line 3");          │                    
└──────────────────────────────────────┘                    
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox gutter width changes with line count - verify remeasure 3`] = `
"┌──────────────────────────────────────┐                    
│   1 function test1() {               │                    
│   2   console.log("Line 1");         │                    
│   3   return 1;                      │                    
│   4 }                                │                    
│   5 function test2() {               │                    
│   6   console.log("Line 2");         │                    
│   7   return 2;                      │                    
│   8 }                                │                    
│   9 function test3() {               │                    
│  10   console.log("Line 3");         │                    
└──────────────────────────────────────┘                    
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox line colors span full width in ScrollBox 1`] = `
"┌────────────────────────────────────────────────┐          
│  1 function test1() {                          │          
│  2   console.log("Line 1");                    │          
│  3   return 1;                                 │          
│  4 }                                           │          
│  5 function test2() {                          │          
│  6   console.log("Line 2");                    │          
│  7   return 2;                                 │          
│  8 }                                           │          
│  9 function test3() {                          │          
│ 10   console.log("Line 3");                    │          
└────────────────────────────────────────────────┘          
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox line colors span full width in ScrollBox 2`] = `
"┌────────────────────────────────────────────────┐          
│  1 function test1() {                          │          
│  2   console.log("Line 1");                    │          
│  3   return 1;                                 │          
│  4 }                                           │          
│  5 function test2() {                          │          
│  6   console.log("Line 2");                    │          
│  7   return 2;                                 │          
│  8 }                                           │          
│  9 function test3() {                          │          
│ 10   console.log("Line 3");                    │          
└────────────────────────────────────────────────┘          
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`LineNumberRenderable in ScrollBox viewport culling with line numbers - dimensions stable 1`] = `
"┌───────────────────────────────────────────┐              █
│  1 function test1() {                     │              █
│  2   console.log("Line 1");               │              ▁
│  3   return 1;                            │               
│  4 }                                      │               
└───────────────────────────────────────────┘               
                                                            
┌───────────────────────────────────────────┐               
│  1 function test1() {                     │               
│  2   console.log("Line 1");               │               
│  3   return 1;                            │               
│  4 }                                      │               
└───────────────────────────────────────────┘               
                                                            
┌───────────────────────────────────────────┐               
│  1 function test1() {                     │               
│  2   console.log("Line 1");               │               
│  3   return 1;                            │               
│  4 }                                      │               
└───────────────────────────────────────────┘               
"
`;

exports[`LineNumberRenderable in ScrollBox viewport culling with line numbers - dimensions stable 2`] = `
"│  2   console.log("Line 1");               │               
│  3   return 1;                            │               
│  4 }                                      │               
└───────────────────────────────────────────┘               
                                                            
┌───────────────────────────────────────────┐               
│  1 function test1() {                     │               
│  2   console.log("Line 1");               │               
│  3   return 1;                            │               
│  4 }                                      │               
└───────────────────────────────────────────┘               
                                                            
┌───────────────────────────────────────────┐               
│  1 function test1() {                     │               
│  2   console.log("Line 1");               │              ▆
│  3   return 1;                            │              █
│  4 }                                      │              █
└───────────────────────────────────────────┘              ▇
                                                            
┌───────────────────────────────────────────┐               
"
`;
